--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Python Application Test with Github Actions 
 on:
   schedule:
   - cron:  '0 3 * * SUN'
@@ -11,15 +11,26 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    
     steps:
       - uses: actions/checkout@v3
-      - name: install packages
-        run: make install
-      - name: lint
-        run: make lint
-      - name: test
-        run: make test
+      - name: Setup Python 3.8
+        uses: actions/setup-python@v1
+        with: 
+          python-version: 3.8
+          
+      - name: install packages and dependencies
+        run: |
+          make install
+      - name: lint with pylint
+        run: |
+          make lint
+      - name: test with pytest
+        run: |
+          make test
       - name: format
-        run: make format
+        run: |
+          make format
       - name: deploy
-        run: make deploy
+        run: |
+          make deploy
